# vestibule

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  config.go  config_test.go  date.go  date_test.go  example.yaml  filter.go  go.mod  go.sum  main.go  metrics.go  proxy.go  proxy_test.go  throttle.go  throttle_test.go
.github/workflows/: ci.yml  publish.yml
mcp/: CLAUDE.md  Dockerfile  README.md  pyproject.toml
mcp/src/vestibule_mcp/: __init__.py  main.py  manifest.py  metrics.py  tools.py
mcp/tests/: test_integration.py  test_manifest.py  test_tools.py
