[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vestibule-mcp"
version = "0.1.0"
description = "MCP server that proxies Vestibule-declared endpoints as tools."
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2",
    "httpx>=0.28",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[project.scripts]
vestibule-mcp = "vestibule_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vestibule_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
